--- a/pom.xml
+++ b/pom.xml
@@ -251,11 +251,22 @@
       <version>1.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>5.8.0.M4</version>
+    </dependency>
     <!--收发邮件-->
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
       <version>1.4.7</version>
+    </dependency>
+    <!--数据校验框架-->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.0.Final</version>
     </dependency>
   </dependencies>
 
